# pibot-swarm-v2

./: .gitignore  AGENT_PROMPTS.md  Cargo.toml  INSTRUCTIONS_AR.md  PI_STATUS_REPORT.md  README.md  SECURITY.md  SERVICES.md  __init__.py  agents.py  core.py  demo_status.json  hybrid_intelligence.py  install.sh  llm_connector.py  llm_connector_fast.py  main.py  mcp_bridge.py  mcp_config.json  monitor_agent.py  orchestrator.py  osint_agent.py  osint_mapper.py  pi  pi.py  pi_telegram.py  report_system_status.md  self_reflection.py  skill_library.py  tools.py
docs/intelligence/: AUDIT_METHODOLOGY.md  guide_solana_security.md  paper_01_sovereignty.md  report_raydium_security.md
pi_core/: __init__.py  agent_runner.py  provider.py
swarm_logs/: session_db1d5dbd.json  session_e8d15ec4.json
